--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Design Your Own Framework</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body class="wrapper main">
+    <div class="container_12 header section">Header</div>
+    <div class="main-container">
+      <div class="container_2 sidebar section">Sidebar</div>
+      <div class="container_8 main-content section">Main Content</div>
+      <div class="container_2 aside section">Aside</div>
+    </div>
+    <div class="container_12 footer section">Footer</div>
+    <div class="overlay">
+      <div class="column container_1"></div>
+      <div class="column container_1"></div>
+      <div class="column container_1"></div>
+      <div class="column container_1"></div>
+      <div class="column container_1"></div>
+      <div class="column container_1"></div>
+      <div class="column container_1"></div>
+      <div class="column container_1"></div>
+      <div class="column container_1"></div>
+      <div class="column container_1"></div>
+      <div class="column container_1"></div>
+      <div class="column container_1"></div>
+    </div>
+  </body>
 </html>
