fixed layout problems added secondary aside bar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="container_2 sidebar section">Sidebar</div>
       <div class="container_8 main-content section">Main Content</div>
       <div class="container_2 aside section">Aside</div>
+      <div class="container_2 aside section">Aside</div>
     </div>
     <div class="container_12 footer section">Footer</div>
     <div class="overlay">
