Added simple description in the example page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>Sidebar: <code>class = "container_2"</code></p>
       </div>
       <div class="container_8 main-content section">
-        <p>Main Content: <code>class = "container_8"</code></p>
+        <p>Main Content: <code>class = "container_8" <br> <br> Every container is designed to be inside ur grid, the grid is designed to fit desktop screens and has a min-width of 1140px, the grid is also responsive with 3 breakpoints. </code></p>
       </div>
       <div class="container_2 aside section">
         <p>Aside: <code>class = "container_2</code></p>
