Added img folder, added menu, user and bing icons. Modified layout to show a cloned page, added more helpers, added styles to fix the example

--- a/index.html
+++ b/index.html
@@ -7,55 +7,101 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Design Your Own Framework</title>
   </head>
-  <body class="wrapper main">
-    <div class="container_12 header section">
-      <p>Header: <code>class = "container_12"</code></p>
-    </div>
-    <div class="main-container">
-      <div class="container_2 sidebar section">
-        <p>Sidebar: <code>class = "container_2"</code></p>
+  <body>
+    <div class="wrapper">
+      <div class="containter_12 spacer">
+        space
       </div>
-      <div class="container_8 main-content section">
-        <p>Main Content: <code>class = "container_8" <br> <br> Every container is designed to be inside ur grid, the grid is designed to fit desktop screens and has a min-width of 1140px, the grid is also responsive with 3 breakpoints. </code></p>
+      <div class="fixedNavbar container_12 header">
+        <ul>
+          <li><a href="">All</a></li>
+          <li><a href="">Images</a></li>
+          <li><a href="">Videos</a></li>
+          <li><a href="">Maps</a></li>
+          <li><a href="">|</a></li>
+          <li><a href="">MSN</a></li>
+          <li><a href="">Office</a></li>
+          <li><a href="">Outlook</a></li>
+        </ul>
+        <ul class="floatRight">
+          <li class="content2"><a href="">English</a></li>
+          <li class="content2"><a href="">Sign In</a></li>
+          <li>
+            <a href=""><img class="icons" src="./img/usericon.png" alt=""/></a>
+          </li>
+          <li>
+            <a href=""><img class="icons2" src="./img/menu.png" alt=""/></a>
+          </li>
+        </ul>
       </div>
-      <div class="container_2 aside section">
-        <p>Aside: <code>class = "container_2</code></p>
+
+      <div class="container_12 contentMargin">
+        <img class="icons3" src="./img/iconfinder_bing_294660.png" alt="" />
+        <input type="search" name="Search" class="search" />
       </div>
-      <div class="container_2 aside section">
-        <p>Aside: <code>class = "container_2</code></p>
+      <div class="container_8 spacer">
+        space
       </div>
-    </div>
-    <div class="container_12 footer section">
-      <p>Footer: <code>class = "container_12</code></p>
-    </div>
-    <div class="overlay" id="overlay">
-      <div class="container_1 column"></div>
-      <div class="container_1 column"></div>
-      <div class="container_1 column"></div>
-      <div class="container_1 column"></div>
-      <div class="container_1 column"></div>
-      <div class="container_1 column"></div>
-      <div class="container_1 column"></div>
-      <div class="container_1 column"></div>
-      <div class="container_1 column"></div>
-      <div class="container_1 column"></div>
-      <div class="container_1 column"></div>
-      <div class="container_1 column"></div>
+      <div class="container_8 spacer">
+        space
+      </div>
+      <div class="container_8 spacer">
+        space
+      </div>
+      <div class="container_8 spacer">
+        space
+      </div>
+      <div class="container_4 aside">
+        <div class="floatRight">
+          <div class="customButton"><p><</p></div>
+          <div class="customButton">></div>
+          <div class="customButton2">info</div>
+        </div>
+      </div>
+      <div class="container_12 footer" id="sticky">
+        <ul>
+          <li><a href="">Privacy and cookies</a></li>
+          <li><a href="">Legal</a></li>
+          <li><a href="">Advertise</a></li>
+          <li><a href="">About our ads</a></li>
+          <li><a href="">Help</a></li>
+          <li><a href="">Feedback</a></li>
+        </ul>
+      </div>
     </div>
 
-    <button class="toggle" onclick="toggleGrid()" id="toggle">Toggle Grid Off</button>
-    <script>
-      function toggleGrid() {
-        var x = document.getElementById("overlay");
-        var y = document.getElementById("toggle");
-        if (x.style.display === "none") {
-          x.style.display = "block";
-          y.innerHTML = "Toggle Grid Off";
-        } else {
-          y.innerHTML = "Toggle Grid On";
-          x.style.display = "none";
+    <div class="wrapper main">
+      <div class="overlay" id="overlay">
+        <div class="container_1 column"></div>
+        <div class="container_1 column"></div>
+        <div class="container_1 column"></div>
+        <div class="container_1 column"></div>
+        <div class="container_1 column"></div>
+        <div class="container_1 column"></div>
+        <div class="container_1 column"></div>
+        <div class="container_1 column"></div>
+        <div class="container_1 column"></div>
+        <div class="container_1 column"></div>
+        <div class="container_1 column"></div>
+        <div class="container_1 column"></div>
+      </div>
+
+      <button class="toggle" onclick="toggleGrid()" id="toggle">
+        Toggle Grid Off
+      </button>
+      <script>
+        function toggleGrid() {
+          var x = document.getElementById("overlay");
+          var y = document.getElementById("toggle");
+          if (x.style.display === "none") {
+            x.style.display = "block";
+            y.innerHTML = "Toggle Grid Off";
+          } else {
+            y.innerHTML = "Toggle Grid On";
+            x.style.display = "none";
+          }
         }
-      }
-    </script>
+      </script>
+    </div>
   </body>
 </html>
