Fixed html error, using html codes now for special characters

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="container_4 aside">
         <div class="floatRight">
-          <div class="customButton"><p><</p></div>
+          <div class="customButton">&#60;</div>
           <div class="customButton">></div>
           <div class="customButton2">info</div>
         </div>
